Desarrollo del Proyecto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+server.port=7079
 
+spring.api1=https://reqres.in/api/users?page=
+spring.api2=&per_page=
+
+spring.json=application/json
+
+spring.log.status=Response status: 
+spring.log.headers=Response headers: 
+spring.log.body=Response body:
+
+spring.error=Error en la petición
+spring.finally=Fin de la ejecución
